--- a/MarriagePlanner/src/app/nav-AdminMenu/nav-Adminmenu.component.html
+++ b/MarriagePlanner/src/app/nav-AdminMenu/nav-Adminmenu.component.html
@@ -36,6 +36,7 @@
           aria-expanded="false">Search <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a style="cursor:pointer;" [routerLink]="'/MemberSearch'">Member Search</a></li>
+          <li><a style="cursor:pointer;" [routerLink]="'/EnquirySearch'">Enquiry Search</a></li>
         
         </ul>
       </li>
